@@ -5,6 +5,7 @@ http://winmerge.org/tracker/[tracker-id]
 
 WinMerge 2.10 RC
   Add icon for "Plugins->List" menu item (#2060771)
+  Use external editor to edit plugins (#2082774)
   Plugins: Show processing instructions in XML plugin (#1979321)
   BugFix: Didn't select word-diff cyclically by pressing F4 key (#1989858)
   BugFix: Crash when generating a folder comparison report (#2008581)
